fix dupe scrollbar

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -22,7 +22,6 @@ body, html {
   height: 100%;
   min-height: 100%;
   margin: 0;
-  overflow-y: scroll;
   scrollbar-width: 5px;
   width: 500px;
   height: 700px;
